syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.chb.examples.lib";
option java_outer_classname = "ChargeProto";

service Charger {
  // GET
  rpc GetChargeById (ChargeRequest) returns (GetChargeReply) {}
  rpc GetChargeByDate (ChargeRequest) returns (stream GetChargeReply) {}
  rpc GetChargeByGenre (ChargeRequest) returns (stream GetChargeReply) {}
  rpc CurrentCostSum (ChargeRequest) returns (GetCostReply) {}
  rpc GetChargeAll (ChargeRequest) returns (stream GetChargeReply) {}
  // POST
  rpc PostCharge (ChargeRequest) returns (GetMessageReply) {}
  // PUT
  rpc PutCharge (ChargeRequest) returns (GetMessageReply) {}
  // PATCH
  rpc PatchCharge (ChargeRequest) returns (GetMessageReply) {}
  // DELETE
  rpc DeleteChargeById (ChargeRequest) returns (GetMessageReply) {}
  rpc DeleteChargeAll (ChargeRequest) returns (GetMessageReply) {}
}

message Charge {
  int32 id = 1;
  int64 cost = 2;
  string genre = 3;
  string date = 4;
  string description = 5;
}

message ChargeRequest {
  Charge charge = 1;
}

message GetChargeReply {
  Charge charge = 1;
}

message GetMessageReply {
  string message = 1;
}

message GetCostReply {
  int64 cost = 1;
}